Prototyp aplikacji mobilnej

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=PracaDyplomowa;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"SIoIMwElblaguDB": "Server=tcp:siwimserver.database.windows.net,1433;Initial Catalog=SIoIMwElblaguDB;Persist Security Info=False;User ID=programista1;Password={InfoMKTK@};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "DefaultConnection": "Server=tcp:siwimserver.database.windows.net,1433;Initial Catalog=SIoIMwElblaguDB;Persist Security Info=False;User ID=programista1;Password=InfoMKTK@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    //"DefaultConnection": "Server=tcp:siwimserver.database.windows.net,1433;Initial Catalog=test;Persist Security Info=False;User ID=programista1;Password={InfoMKTK@};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
